updated online courses

--- a/resume.html
+++ b/resume.html
@@ -183,16 +183,81 @@
                                 <div>
                                     <div class="d-flex justify-content-between">
                                         <div class="d-flex justify-content-start">
+                                            <div class="ml-2 mr-4 d-flex align-items-center"><img src="img/unihel.jpg"
+                                                    width="70px">
+                                            </div>
+                                            <div>
+                                                <div class="font-weight-bold">
+                                                    Full Stack Open 2020 (by The University of Helsinki, Finland)<br>
+                                                    04/2020 - today
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex align-items-center mx-3 clickable"
+                                            onClick="toggle('unihel');"><i class="material-icons">more_vert</i></div>
+                                    </div>
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
+                                        id="unihel" style="display: none;">
+                                        Syllabus:
+                                        <ul>
+                                            <li>React</li>
+                                            <li>Redux</li>
+                                            <li>Node.js</li>
+                                            <li>MongoDB</li>
+                                            <li>GraphQL</li>
+                                            <li>TypeScript</li>
+                                        </ul>
+                                        <br>
+                                        Exercises are being uploaded to a GitHub repository (available <a href="https://github.com/wellybean/Full-Stack-Open-Course">here</a>)
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div>
+                                    <div class="d-flex justify-content-between">
+                                        <div class="d-flex justify-content-start">
                                             <div class="ml-2 mr-4 d-flex align-items-center"><img src="img/coursera.jpg"
                                                     width="70px">
                                             </div>
                                             <div>
                                                 <div class="font-weight-bold">
-                                                    Using Python to Interact with the Operating System <br>
-                                                    Taught by Google
+                                                    Introduction to Git and GitHub (taught by Google via Coursera) <br>
+                                                    03/2020
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex align-items-center mx-3 clickable"
+                                            onClick="toggle('coursera3');">
+                                            <i class="material-icons">more_vert</i></div>
+                                    </div>
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
+                                        id="coursera3" style="display: none;">
+                                        Syllabus:
+                                        <ul>
+                                            <li>Git</li>
+                                            <li>Github</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div>
+                                    <div class="d-flex justify-content-between">
+                                        <div class="d-flex justify-content-start">
+                                            <div class="ml-2 mr-4 d-flex align-items-center"><img src="img/coursera.jpg"
+                                                    width="70px">
+                                            </div>
+                                            <div>
+                                                <div class="font-weight-bold">
+                                                    Using Python to Interact with the Operating System (taught by Google via Coursera)<br>
+                                                    02/2020
                                                 </div>
                                                 <div class="font-italic">
-                                                    Certificate earned at Sunday, February 23, 2020 5:45 PM GMT (available <a href="https://coursera.org/share/b79906b29e07ff2f526b29242aa36577">here</a>)
+                                                    Certificate earned at Sunday, February 23, 2020 5:45 PM GMT (available <a href="https://coursera.org/share/b79906b29e07ff2f526b29242aa36577">here</span></a>)
                                                 </div>
                                             </div>
                                         </div>
@@ -225,8 +290,8 @@
                                             </div>
                                             <div>
                                                 <div class="font-weight-bold">
-                                                    Crash Course on Python <br>
-                                                    Taught by Google
+                                                    Crash Course on Python (taught by Google via Coursera)<br>
+                                                    01/2020
                                                 </div>
                                                 <div class="font-italic">
                                                     Certificate earned at Wednesday, February 5, 2020 11:19 PM GMT (available <a href="https://coursera.org/share/9166cd5054b95c189b500f739d899c98">here</a>)
@@ -244,6 +309,37 @@
                                             <li>Loops</li>
                                             <li>Strings, Lists and Dictionaries</li>
                                             <li>Object Oriented Programming</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div>
+                                    <div class="d-flex justify-content-between">
+                                        <div class="d-flex justify-content-start">
+                                            <div class="ml-2 mr-4 d-flex align-items-center"><img src="img/udemy.png"
+                                                    width="70px">
+                                            </div>
+                                            <div>
+                                                <div class="font-weight-bold">
+                                                    Java Programming Masterclass for Software Developers (via Udemy)<br>
+                                                    09/2019 - 12/2019
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex align-items-center mx-3 clickable"
+                                            onClick="toggle('udemy');"><i class="material-icons">more_vert</i></div>
+                                    </div>
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
+                                        id="udemy" style="display: none;">
+                                        Syllabus:
+                                        <ul>
+                                            <li>Basic Java Syntax</li>
+                                            <li>Object-oriented programming</li>
+                                            <li>Data Structures</li>
+                                            <li>Generics</li>
                                         </ul>
                                     </div>
                                 </div>
